Prevented images from overlapping

--- a/assets/style.css
+++ b/assets/style.css
@@ -71,6 +71,8 @@ searchweather {
     border-radius: 15px;
     margin-left: auto;
     margin-right: auto;
+    height: 250px;
+    overflow: hidden;
 }
 
 .card-header {
@@ -84,6 +86,7 @@ searchweather {
     object-fit: cover;
     margin-left: auto;
     margin-right: auto;
+    height: 250px;
 }
 
 .guidanceicons span {
